chore: finalize entrega 3 platform and evidence