@@ -1,17 +1,23 @@
 package com.javeriana.eventos.payment.infrastructure.outbox;
 
 import com.javeriana.eventos.payment.domain.port.out.OutboxEventRepository;
-import com.javeriana.eventos.shared.infrastructure.outbox.OutboxEvent;
+import com.javeriana.eventos.shared.domain.outbox.EstadoOutbox;
+import com.javeriana.eventos.shared.domain.outbox.OutboxEvent;
 import org.springframework.stereotype.Repository;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 /**
- * Adaptador JPA que implementa OutboxEventRepository (puerto de salida del dominio).
+ * Adaptador JPA para el puerto OutboxEventRepository (payment-service).
  *
- * Espeja la implementación de inscription-service para mantener consistencia
- * del Outbox Pattern entre productores de eventos.
+ * buscarNoPublicados usa SELECT FOR UPDATE SKIP LOCKED para garantizar que
+ * instancias paralelas del relay no procesen el mismo evento (ADR-012).
+ * El lock se mantiene activo mientras dure la TX del relay (que llama a este
+ * método con @Transactional, heredando la misma TX gracias a REQUIRED).
  */
 @Repository
 public class JpaOutboxEventRepository implements OutboxEventRepository {
@@ -23,31 +29,54 @@ public class JpaOutboxEventRepository implements OutboxEventRepository {
     }
 
     @Override
-    public void guardar(OutboxEvent event) {
-        OutboxEventEntity entity = new OutboxEventEntity();
-        entity.setId(event.getId());
-        entity.setAggregateId(event.getAggregateId());
-        entity.setEventType(event.getEventType());
-        entity.setPayload(event.getPayload());
-        entity.setPublished(false);
-        entity.setCreatedAt(event.getCreatedAt());
+    public OutboxEvent guardar(OutboxEvent evento) {
+        OutboxEventEntity entity = OutboxEventMapper.toEntity(evento);
         springDataRepo.save(entity);
+        return evento;
     }
 
+    /**
+     * REQUIRED (no MANDATORY): el relay siempre llama desde una TX activa, por lo
+     * que en producción el lock se hereda. REQUIRED permite además que los tests
+     * llamen a este método sin una TX previa (crean su propia TX de lectura corta),
+     * evitando un IllegalTransactionStateException en PagoFlowEndToEndIT.
+     */
     @Override
-    public List<OutboxEvent> buscarNoPublicados() {
-        return springDataRepo.findPendingEvents()
+    @Transactional(propagation = Propagation.REQUIRED)
+    public List<OutboxEvent> buscarNoPublicados(int limite) {
+        return springDataRepo.findPendingForUpdate(limite)
             .stream()
-            .map(e -> new OutboxEvent(e.getAggregateId(), e.getEventType(), e.getPayload()))
-            .collect(Collectors.toList());
+            .map(OutboxEventMapper::toDomain)
+            .toList();
     }
 
     @Override
-    public void marcarComoPublicado(OutboxEvent event) {
-        springDataRepo.findById(event.getId()).ifPresent(entity -> {
-            entity.setPublished(true);
-            entity.setPublishedAt(event.getPublishedAt());
+    public void marcarProcesado(UUID id) {
+        springDataRepo.findById(id).ifPresent(entity -> {
+            entity.setEstado(EstadoOutbox.ENVIADO);
+            entity.setEnviadoEn(Instant.now());
             springDataRepo.save(entity);
         });
+    }
+
+    @Override
+    public void incrementarIntentos(UUID id) {
+        springDataRepo.findById(id).ifPresent(entity -> {
+            entity.setIntentos(entity.getIntentos() + 1);
+            springDataRepo.save(entity);
+        });
+    }
+
+    @Override
+    public void marcarFallido(UUID id) {
+        springDataRepo.findById(id).ifPresent(entity -> {
+            entity.setEstado(EstadoOutbox.FALLIDO);
+            springDataRepo.save(entity);
+        });
+    }
+
+    @Override
+    public long contarPendientes() {
+        return springDataRepo.countByEstado(EstadoOutbox.PENDIENTE);
     }
 }
